--- a/indextom.html
+++ b/indextom.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 	<h1>John's Website</h1>
-	<h3>>
+	<h3>
 		<ul>
-			<li><a href="index.html">John</a>></li>
+			<li><a href="index.html">John</a></li>
 			<li><a href="indextom.html">Tom</a><li>
 		</ul>
 	</h3>
